--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 /out/
 /bin/
+/backup
 /hexlevels/backup
 /hexlevels/patterns/backup
-/backup
 /levels.xml
 /.project
 /.classpath
 /.idea
 /*.haxagon
+/Haxa-Editor.jar
+/Haxa-Editor.iml
+/src/META-INF/MANIFEST.MF
